[Windows] JavaFX crash in WebPage.twkOpen in 8u112 when closing WebView while debugging

XMLWordPrintable

    • web
    • x86
    • windows_7

        To verify the issue https://bugs.openjdk.java.net/browse/JDK-8163252,
        we download Java 8u112 (b04) from https://jdk8.java.net/download.html,
        and execute it.

        However, I found that this JavaSE8u112-ea b02 Windows-x86 JVM crashed when executing WebPage.twkOpen of JavaFx.
        Refer to attached hs_err_pid12584.log for detail of the crash.

        This crash will occur neither in SE8u92 nor SE8u102.

        This crash can be reproduce with following steps.

        Attached DebuggerCrash.java is a test case to reproduce:
        1) it requires jetty and javax.servlet-api in the classpath (attached)
        2) it require you to run the test case, then attach the Chrome Browser debugger to the vm by putting this url in Chromel:
        chrome-devtools://devtools/bundled/inspector.html?ws=localhost:9222/devtools/page/1
        3) Right click the page and press reload, the vm will crash every time for me and another PCs we've tested on . The same steps in Java 8 U92 have never crashed.

        .

          1. hs_err_pid12584.log
            45 kB
            Guixin Cheng
          2. DebuggerCrash.java
            7 kB
            Guixin Cheng
          3. jetty-all-compact3-9.3.6.v20151106.jar.sig
            0.2 kB
            Guixin Cheng
          4. DebuggerCrash2.java
            8 kB
            Guixin Cheng

              Assignee:
              Guru Hb (Inactive)
              Reporter:
              Guixin Cheng
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: