8164076: [Windows] JavaFX crash in WebPage.twkOpen in 8u112 when closing WebView while debugging Reviewed-by: kcr, mbilla